tests/ui/feature-gates/feature-gate-inherent_associated_types.stderr
error[E0658]: inherent associated types are unstable
  --> $DIR/feature-gate-inherent_associated_types.rs:7:5
   |
LL |     type Bar = isize;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/crablang/crablang/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
